--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </span>
         </div> 
         <!--  -->
-        <p>Currently I am doing internship in sociolla as Full stack developer.Looking opportunities as Software Engineer also , I hava Strong engineering fresher with an Engineer's Degree focused in computer science engineering from Birla Institute of Technology. </p>
+        <p>Currently I am doing internship in sociolla as Full stack developer.Looking opportunities as Software Engineer also , I have Strong engineering fresher with an Engineer's Degree focused in computer science engineering from Birla Institute of Technology. </p>
       </div> <!-- end summary -->
       
       
