--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                   <i class="fas fa-envelope"></i> surajpanker82@gmail.com | 
                   <i class="fas fa-phone"></i> 8094486278 | 7976978646</h5>
               <h5>
-                  <i class="fab fa-github"></i>https://github.com/surajpanker || <i class="fab fa-bitbucket"></i>https://bitbucket.org/suraj82 Software Developer</h5>
+                   <i class="fab fa-github"></i> https://github.com/surajpanker || <i class="fab fa-bitbucket"></i>https://bitbucket.org/suraj82  Software Developer
+              </h5>
             </span>
           </div> <!-- end base-info-span -->
         </div> <!-- end base-info -->
