--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </span>
         </div> 
         <!--  -->
-        <p>Currently I am doing internship in sociolla as Full stack developer.Looking opportunities as Software Engineer also , I am Strong engineering fresher with an Engineer's Degree focused in computer science engineering from Birla Institute of Technology. </p>
+        <p>Currently I am doing internship in sociolla as Full stack developer.Looking For opportunities as Software Engineer also , I am Strong engineering fresher with an Engineer's Degree focused in computer science engineering from Birla Institute of Technology. </p>
       </div> <!-- end summary -->
       
       
